Documentacion de delete y Cree una Clase Base de Validación
